--- a/css/style.css
+++ b/css/style.css
@@ -1,111 +1,104 @@
-/** my global style ***/
+/** global style ***/
 
-*{
+* {
     box-sizing: border-box;
 }
 
-.container{
+.container {
     width: 1000px;
-    margin:0 auto;
+    margin: 0 auto;
 }
 
-.clearfix{
+.clearfix {
     clear: both;
 }
 
-
-
 /***start nav ***/
-
-nav{
-    background-color:#26272B;
+nav {
+    background-color: #26272B;
     overflow: hidden;
     height: 34px;
-    
-    
-}
 
-nav ul{
-    float:left;
+
+}
+nav ul {
+    float: left;
     list-style: none;
-     margin-top: 8px;
+    margin-top: 8px;
     padding-left: 0px;
-    
-}
 
+}
 nav ul li {
     display: inline-block;
     padding-right: 6px;
 }
 
-nav ul li i  {
-    color:#A6A6A6;
+nav ul li i {
+    color: #A6A6A6;
     cursor: pointer;
-    -webkit-transition: all .5s ease-in ;
-    -moz-transition: all .5s ease-in ;
-    -o-transition: all .5s ease-in;
-    transition: all .5s ease-in ; 
+    -webkit-transition: all .2s ease-in;
+    -moz-transition: all .2s ease-in;
+    -o-transition: all .2s ease-in;
+    transition: all .2s ease-in;
+}
+nav ul li:first-of-type:hover i,
+nav ul li:nth-of-type(3):hover i,
+nav ul li:nth-of-type(5):hover i,
+nav ul li:nth-of-type(7):hover i {
+    color: #f33;
 }
 
-nav ul li:first-of-type:hover i,nav ul li:nth-of-type(3):hover i,nav ul li:nth-of-type(5):hover i,nav ul li:nth-of-type(7):hover i {
-    color:#f33;
+nav ul li:nth-of-type(2):hover i,
+nav ul li:nth-of-type(4):hover i,
+nav ul li:nth-of-type(6):hover i {
+
+    color: #33f;
 }
-
-nav ul li:nth-of-type(2):hover i,nav ul li:nth-of-type(4):hover i,nav ul li:nth-of-type(6):hover i{
-    
-    color:#33f;
-}
-
-
 
 nav form {
-    float:right;
+    float: right;
     display: inline;
     margin-top: -4px;
     margin-right: 10px;
 }
 
 nav form div {
-     display: inline-block;
-   margin-top:10px;
-   
+    display: inline-block;
+    margin-top: 10px;
+
 }
 
-nav form div:first-of-type{
+nav form div:first-of-type {
     margin-right: 30px;
 }
 
-nav form div:last-of-type{
-     margin-right: 30px;
+nav form div:last-of-type {
+    margin-right: 30px;
 }
 
 nav form div a {
-    color:#A6A6A6;
-    text-decoration:none;
+    color: #A6A6A6;
+    text-decoration: none;
     text-transform: capitalize;
-        font-size: 15px;
+    font-size: 15px;
 }
 
 nav form div i {
-     color:#A6A6A6;
+    color: #A6A6A6;
     cursor: pointer;
     padding-right: 3px;
 }
+
 /***end nav ***/
 
 /**** start header ********/
-
-.header{
+.header {
     background-image: url(../images/01.png);
     background-size: cover;
-    
     position: relative;
-   
-    
-    
 }
 
-.header .over-lay{
+.header .over-lay {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -113,24 +106,20 @@ nav form div i {
     right: 0px;
     bottom: 0px;
     top: 0px;
-    background-color:rgba(0,0,0,.7);
-    
-
+    background-color: rgba(0, 0, 0, .7);
 }
 
 .header .over-lay .menu {
-    color:#fff;
-    
+    color: #fff;
     padding-top: 15px;
 }
 
 .header .over-lay .menu .brand {
     float: left;
-    width:40%;
+    width: 40%;
 }
 
 .header .over-lay .menu .brand h2 {
-  
     padding-top: 0px;
     font-weight: normal;
     font-size: 28px;
@@ -142,26 +131,30 @@ nav form div i {
     list-style: none;
     padding-top: 6px;
 }
-.header .over-lay .menu > ul >li {
-    display:inline-block;
+
+.header .over-lay .menu > ul > li {
+    display: inline-block;
     padding-right: 20px;
     font-size: 16px;
     text-transform: uppercase;
     float: left;
     cursor: pointer;
-    
+
 }
 
-.header .over-lay .menu > ul >li:nth-of-type(2),.header .over-lay .menu > ul >li:nth-of-type(3),.header .over-lay .menu > ul >li ul li {
+.header .over-lay .menu > ul > li:nth-of-type(2),
+.header .over-lay .menu > ul > li:nth-of-type(3),
+.header .over-lay .menu > ul > li ul li {
     position: relative;
 }
 
-.header .over-lay .menu > ul > li i,.last-drop i {
-        padding-right: 5px;
-        margin-top: -6px;
+.header .over-lay .menu > ul > li i,
+.last-drop i {
+    padding-right: 5px;
+    margin-top: -6px;
 }
 
-.header .over-lay .menu > ul >li > ul{
+.header .over-lay .menu > ul > li > ul {
     position: absolute;
     top: 30px;
     left: -12px;
@@ -169,32 +162,31 @@ nav form div i {
     list-style: none;
     width: 200px;
     display: none;
-    
-    
 }
 
-.header .over-lay .menu > ul >li >ul >li {
-       font-size: 19px;
+.header .over-lay .menu > ul > li > ul > li {
+    font-size: 19px;
     text-transform: lowercase;
-       padding: 11px 0 11px 18px;
-    background-color: rgba(0,0,0,.5);
+    padding: 11px 0 11px 18px;
+    background-color: rgba(0, 0, 0, .5);
     border-top: 1px solid #000;
     cursor: pointer;
-    
 }
 
-.header .over-lay .menu > ul >li ul li:hover{
-    background-color:#56AED4;
-    transition: all 1s ease;
-}
-.color-link{
-    color:#56AED4;
+.header .over-lay .menu > ul > li ul li:hover {
+    background-color: #56AED4;
     transition: all 1s ease;
 }
 
-.header .over-lay .menu > ul >li ul li:nth-of-type(2):hover .last-drop{
-    display:block;
+.color-link {
+    color: #56AED4;
+    transition: all 1s ease;
 }
+
+.header .over-lay .menu > ul > li ul li:nth-of-type(2):hover .last-drop {
+    display: block;
+}
+
 .last-drop {
     position: absolute;
     left: 200px;
@@ -205,37 +197,39 @@ nav form div i {
     display: none;
 }
 
-.last-drop li{
-      font-size: 19px;
+.last-drop li {
+    font-size: 19px;
     text-transform: lowercase;
-       padding: 11px 0 11px 18px;
-    background-color: rgba(0,0,0,.5);
+    padding: 11px 0 11px 18px;
+    background-color: rgba(0, 0, 0, .5);
     border-top: 1px solid #000;
     cursor: pointer;
 }
 
 .main-head {
-    color:#ccc;
+    color: #ccc;
     text-align: center;
     margin-top: 230px;
-    
+
 }
+
 .main-head p {
     font-size: 22px;
     text-transform: lowercase;
     word-spacing: 2px;
     margin-top: 10px;
 }
-.main-head h2{
+
+.main-head h2 {
     text-transform: uppercase;
     font-weight: normal;
 }
 
 .main-head button {
-    background:none;
-    padding:15px 30px;
-    border:1px solid #ddd;
-    color:#fff;
+    background: none;
+    padding: 15px 30px;
+    border: 1px solid #ddd;
+    color: #fff;
     font-size: 20px;
     font-weight: 100;
     margin-top: 25px;
@@ -245,9 +239,9 @@ nav form div i {
 
 /*************start article 1 ************/
 
-.article-1{
+.article-1 {
     background: #fff;
-    padding:20px;
+    padding: 20px;
     overflow: hidden;
 }
 
@@ -255,72 +249,72 @@ nav form div i {
     text-align: center;
     padding: 20px;
     padding-top: 40px;
-    color:#777;
+    color: #777;
 }
 
 .article-1 .main h3 {
-        font-size: 27px;
+    font-size: 27px;
     font-weight: normal;
     margin-bottom: 0px;
-    color:#555;
+    color: #555;
 }
 
 .article-1 .main p {
     font-size: 19px;
     margin-top: 5px;
 }
-.article-1 .parts{
-    margin-top:30px;
+
+.article-1 .parts {
+    margin-top: 30px;
 }
+
 .article-1 .parts section {
     float: left;
-    width:31%;
-    margin-top:40px;
+    width: 31%;
+    margin-top: 40px;
     margin-left: 44px;
-    width:  304px;
-    
-     text-align: center;
-    border-bottom: 2px solid  #56AED4;
-    
+    width: 304px;
+    text-align: center;
+    border-bottom: 2px solid #56AED4;
+
 }
 
-.article-1 .parts section  div {
-     border:.5px solid #fff;
-      text-align: center;
-    color:#797979;
-    padding:25px 0 15px 0;
-        width: 90%;
+.article-1 .parts section div {
+    border: .5px solid #fff;
+    text-align: center;
+    color: #797979;
+    padding: 25px 0 15px 0;
+    width: 90%;
     margin: auto;
-     transition: all .3s ease-in-out ;
+    transition: all .3s ease-in-out;
 }
 
 
-.article-1 .parts section div:hover{
-    border:.5px solid #aaa;
-}
-.article-1 .parts section:first-of-type{
-    margin-left:0px;
+.article-1 .parts section div:hover {
+    border: .5px solid #aaa;
 }
 
-
+.article-1 .parts section:first-of-type {
+    margin-left: 0px;
+}
 
 .article-1 .parts section i {
     padding-bottom: 20px;
-    color:#555;
+    color: #555;
     padding-bottom: 0px;
-    
+
 }
+
 .article-1 .parts section h3 {
     font-weight: normal;
     font-size: 20px;
-    color:#777;
+    color: #777;
     margin-bottom: 5px;
     padding-top: 5px;
-    
 }
 
 .article-1 .parts section p {
-    padding:11px 34px 10px;
+    padding: 11px 34px 10px;
     font-size: 16px;
     margin-top: 0;
     line-height: 1.6;
@@ -328,7 +322,7 @@ nav form div i {
 }
 
 .article-1 .parts section a {
-     padding-top: 20px;
+    padding-top: 20px;
     width: :100%;
     width: 100%;
     text-decoration: none;
@@ -340,57 +334,58 @@ nav form div i {
     margin: 25px auto 0;
     letter-spacing: 1px;
     opacity: 0;
-       
+
 }
 
 
 /****** start article two *********/
 
 .article-2 {
-    margin:100px 0 30px;
+    margin: 100px 0 30px;
     overflow: hidden;
     height: 710px;
 }
 
 .article-2 .left-img {
-      width:100%;
+    width: 100%;
     height: 100%;
 }
-.article-2 .left-img,.article-2 .right-part {
+
+.article-2 .left-img,
+.article-2 .right-part {
     float: left;
-    width:50%;
+    width: 50%;
 }
 
 .article-2 .left-img img {
-    width:100%;
+    width: 100%;
     height: 100%;
 }
 
 .article-2 .right-part {
     background-color: #151517;
-    color:#fff;
+    color: #fff;
     height: 100%;
     padding: 100px 50px;
 }
 
-.article-2 .right-part h2{
+.article-2 .right-part h2 {
     font-weight: 600;
     font-size: 26px;
 }
 
 .article-2 .right-part span {
-    
-     width: 63%;
+    width: 63%;
     font-size: 20px;
     font-weight: normal;
     line-height: 1.3;
     display: block;
 }
-   
+
 .article-2 .right-part ul {
     list-style: none;
     padding-left: 0;
-        margin-top: 14px;
+    margin-top: 14px;
 }
 
 .article-2 .right-part ul li {
@@ -411,7 +406,7 @@ nav form div i {
 
 .article-2 .right-part ul li i {
     padding-top: 0;
-    margin-top:0;
+    margin-top: 0;
     display: inline-block;
     position: absolute;
     top: 31px;
@@ -426,18 +421,17 @@ nav form div i {
     color: #fff;
     padding: 14px 18px;
     font-size: 17px;
-    border:1px solid #56AED4;
+    border: 1px solid #56AED4;
     letter-spacing: 1px;
     cursor: pointer;
     transition: all .3s ease-in-out;
     text-transform: uppercase;
 }
 
-.article-2 .right-part button:hover{
+.article-2 .right-part button:hover {
     background: #151517;
-    color:#fff;
-    border:1px solid #fff;
-    
+    color: #fff;
+    border: 1px solid #fff;
 }
 
 /*** start article-3 ****/
@@ -446,55 +440,59 @@ nav form div i {
     margin-top: 110px;
 }
 
-.article-3 .head{
+.article-3 .head {
     text-align: center;
 }
 
-.article-3 .head h2{
-       color: #666;
+.article-3 .head h2 {
+    color: #666;
     font-size: 25px;
     font-weight: 500;
     margin-bottom: 0px;
 }
 
-.article-3 .head  p {
+.article-3 .head p {
     color: #777;
     font-size: 20px;
-    margin-top:4px;
+    margin-top: 4px;
 }
+
 .article-3 .body {
     overflow: hidden;
     margin-top: 90px;
 }
 
 .article-3 .body .body-1 {
-     margin-left:0px !important;
+    margin-left: 0px !important;
 }
-.article-3 .body .body-1,.article-3 .body .body-2,.article-3 .body .body-3 {
+
+.article-3 .body .body-1,
+.article-3 .body .body-2,
+.article-3 .body .body-3 {
     float: left;
-       width: 30.33%;
+    width: 30.33%;
     margin-left: 45px;
 }
 
-.article-3 .body .body-1 h3{
-    margin-top:0px;
+.article-3 .body .body-1 h3 {
+    margin-top: 0px;
     color: #777;
     font-weight: 500;
     font-size: 20px;
     margin-bottom: 10px;
-    
+
 }
 
 .article-3 .body .body-1 p {
-     color: #888;
+    color: #888;
     font-size: 21px;
     line-height: 1.3;
     margin-top: 0;
-     margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .article-3 .body .body-1 button {
-       margin-top: 28px;
+    margin-top: 28px;
     text-decoration: none;
     background: #56AED4;
     display: block;
@@ -508,24 +506,21 @@ nav form div i {
     text-transform: uppercase;
 }
 
-.article-3 .body .body-1 button:hover{
-     background: #fff;
-    color:#666;
-    border:1px solid #111
+.article-3 .body .body-1 button:hover {
+    background: #fff;
+    color: #666;
+    border: 1px solid #111
 }
 
-.article-3 .body .body-2{
-    
-    
+.article-3 .body .body-2 {}
+
+.article-3 .body .body-2 img {
+    width: 100%;
+
 }
 
-.article-3 .body .body-2 img{
-    width:100%;
-       
-}
-
-.article-3 .body .body-2 h3{
-     margin-top:0px;
+.article-3 .body .body-2 h3 {
+    margin-top: 0px;
     color: #777;
     font-weight: 500;
     font-size: 20px;
@@ -533,7 +528,7 @@ nav form div i {
 }
 
 .article-3 .body .body-2 p {
-       color: #888;
+    color: #888;
     font-size: 20px;
     line-height: 1.3;
     margin-top: 0;
@@ -542,21 +537,22 @@ nav form div i {
 
 /********** start section mini **************/
 
-.mini{
-    background-color:#26272B;
+.mini {
+    background-color: #26272B;
     overflow: hidden;
-    margin-top:90px;
-    margin-bottom:70px;
-       padding-top: 55px;
-    padding-bottom: 65px;;
-    
+    margin-top: 90px;
+    margin-bottom: 70px;
+    padding-top: 55px;
+    padding-bottom: 65px;
+
 }
 
-.mini .mini-1-1{
+.mini .mini-1-1 {
     float: left;
-    width:70%;
+    width: 70%;
 }
-.mini .mini-1-1 h2{
+
+.mini .mini-1-1 h2 {
     color: #fff;
     font-weight: 400;
     font-size: 26px;
@@ -569,14 +565,15 @@ nav form div i {
     font-size: 20px;
     margin-top: 0px;
 }
-.mini .mini-1-2{
+
+.mini .mini-1-2 {
     float: right;
-    width:30%;
+    width: 30%;
 }
 
-.mini .mini-1-2 button{
+.mini .mini-1-2 button {
     display: inline-block;
-       margin-top: 40px;
+    margin-top: 40px;
     text-decoration: none;
     background: #56AED4;
     display: block;
@@ -591,24 +588,26 @@ nav form div i {
     margin-left: 90px;
 }
 
-.mini .mini-1-2 button:hover{
-   background: none;
+.mini .mini-1-2 button:hover {
+    background: none;
     color: #999;
-    border:1px solid #888;
+    border: 1px solid #888;
 }
-    /********start mini section -2 *******/
-.mini-2{
-    padding:30px 10px 90px;
+
+/********start mini section -2 *******/
+
+.mini-2 {
+    padding: 30px 10px 90px;
     text-align: center;
 }
 
-.mini-2 .mini-2-1 a{
-     text-decoration: none;
+.mini-2 .mini-2-1 a {
+    text-decoration: none;
     color: #56AED4;
     font-size: 16px;
 }
 
-.mini-2 .mini-2-1 h2{
+.mini-2 .mini-2-1 h2 {
     color: #7979A2;
     font-weight: 400;
     font-size: 26px;
@@ -618,16 +617,17 @@ nav form div i {
 }
 
 .mini-2 .mini-2-1 p {
-    color:#b3b3b3;
+    color: #b3b3b3;
     font-size: 20px;
     margin-top: 0px;
 }
 
 /**********start article four *******/
-.article-4{
+
+.article-4 {
     margin-bottom: 25px;
 }
-    
+
 .article-4 .badge {
     width: 40px;
     text-align: center;
@@ -637,52 +637,52 @@ nav form div i {
 }
 
 .article-4 .badge span {
-    
-       background-color: rgba(0,0,0,.7);
+
+    background-color: rgba(0, 0, 0, .7);
     display: inline-block;
     color: #fff;
     padding: 10px 17px;
     font-weight: bold;
-   
 }
 
 .article-4 .badge i {
-     background-color: #56AED4;
+    background-color: #56AED4;
     padding: 10px 25px;
     color: #fff;
     transition: all .4s ease-in-out;
     cursor: pointer;
 }
 
-.article-4 .badge i:hover{
+.article-4 .badge i:hover {
     background-color: #FFFFFF;
-    color:#56AED4;
+    color: #56AED4;
 }
 
-.article-4 .article-4-1 figure{
-     margin: 0px;
+.article-4 .article-4-1 figure {
+    margin: 0px;
     position: relative;
 }
-.article-4 .article-4-1 img{
-   
-        width: 100%;
+
+.article-4 .article-4-1 img {
+    width: 100%;
     overflow: hidden;
 }
-.article-4 .article-4-1{
+
+.article-4 .article-4-1 {
     float: left;
-    width:25%;
+    width: 25%;
     text-align: center;
 }
 
-.article-4 .article-4-1 h3{
-     color: #7979A2;
+.article-4 .article-4-1 h3 {
+    color: #7979A2;
     font-weight: 400;
     font-size: 21px;
-    margin-bottom:17px;
+    margin-bottom: 17px;
 }
 
 .article-4 .article-4-1 .main-p {
-         color: #797979;
+    color: #797979;
     font-size: 20px;
     padding: 0px 20px;
     line-height: 1.3;
@@ -691,96 +691,93 @@ nav form div i {
 
 /********start footer ****/
 
-footer{
+footer {
     background: #151517;
     height: 600px;
     padding: 60px 0;
 }
 
-footer .footer-head{
+footer .footer-head {
     text-align: center;
     margin-bottom: 50px;
 }
 
-footer .footer-head h2{
-     color: #fff;
+footer .footer-head h2 {
+    color: #fff;
     font-weight: 100;
     font-size: 31px;
     margin-bottom: 22px;
 }
 
-footer .footer-head  p {
+footer .footer-head p {
     color: #9a9494;
     font-size: 19px;
     margin-top: 0px;
 }
 
-footer .footer-body{
-    margin-top:90px;
+footer .footer-body {
+    margin-top: 90px;
     overflow: hidden;
 }
-   
+
 footer .footer-body div {
-    width:23%;
+    width: 23%;
     float: left;
-        margin-left: 26px;
+    margin-left: 26px;
     color: #A6A6A6;
 }
 
-footer .footer-body div:first-of-type{
-     margin-left: 0 !important;
+footer .footer-body div:first-of-type {
+    margin-left: 0 !important;
 }
 
-footer .footer-body div h2{
-    
-     color: #fff;
+footer .footer-body div h2 {
+    color: #fff;
     font-size: 18px;
     font-weight: normal;
-    margin-bottom:8px;
-     padding-left: 3px;
+    margin-bottom: 8px;
+    padding-left: 3px;
     letter-spacing: .7px;
-    
-    
-    
 }
 
 footer .footer-body div hr {
-    border-color:#374373;
+    border-color: #374373;
 }
-   
+
 footer .footer-body .footer-body-1 p {
     color: #A6A6A6;
     line-height: 1.6;
     padding-top: 10px;
 }
 
-footer .footer-body .footer-body-1 p span:first-of-type{
+footer .footer-body .footer-body-1 p span:first-of-type {
     margin-top: 20px;
 }
 
 footer .footer-body .footer-body-1 p span {
-    display:block;
+    display: block;
     font-size: 18px;
     letter-spacing: .7px;
-    
+
 }
 
-footer .footer-body .footer-body-2  a {
+footer .footer-body .footer-body-2 a {
     color: #56AEC8;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 19px;
-     padding-top: 11px;
+    padding-top: 11px;
     display: block;
-}
-footer .footer-body .footer-body-2 span:first-of-type{
-        font-size: 13px;
-    display: block;
-        padding-top: 7px;
 }
 
-footer .footer-body .footer-body-2 span:last-of-type{
-     line-height: 1.4;
+footer .footer-body .footer-body-2 span:first-of-type {
+    font-size: 13px;
+    display: block;
+    padding-top: 7px;
+}
+
+footer .footer-body .footer-body-2 span:last-of-type {
+    line-height: 1.4;
     font-size: 17px;
     margin-top: 0px;
     display: block;
@@ -795,7 +792,7 @@ footer .footer-body .footer-body-3 a {
 }
 
 footer .footer-body .footer-body-4 p {
-         line-height: 1.3;
+    line-height: 1.3;
     font-size: 17px;
     color: #A6A6A6;
     padding-top: 8px;
@@ -803,15 +800,15 @@ footer .footer-body .footer-body-4 p {
 
 /***** last-foot ***/
 
-.last-foot{
-    background:#26272B;
-   overflow: hidden;
+.last-foot {
+    background: #26272B;
+    overflow: hidden;
     color: #959da0;
 }
 
 .last-foot p {
     float: left;
-        padding: 7px 0;
+    padding: 7px 0;
 }
 
 .last-foot span {
